--- a/Templates/upload.html
+++ b/Templates/upload.html
@@ -1,5 +1,4 @@
 
-{% extends "layout.html" %}
 <html lang="en">
 <head>
      <meta charset="UTF-8">
@@ -8,12 +7,24 @@
      </Title>
 </head>
 <body>
-<h1>
- File Uploader
-</h1>
-<form id= "upload-form" action= "{{  url_for('upload')  }} method= "POST" enctype= "multipart/form-data">
-<input type="file" name= "file" accept="image/*" multiple>
+  <h1>
+   Upload hier je foto als het een auto is
+  </h1>
+  <form id= "upload-form" action= "{{  url_for('upload')  }}" method= "POST" enctype= "multipart/form-data">
+  <input type="file" name= "file" accept="image/*" multiple>
+  <input type="submit" value="send">
 
-</form>
+  </form>
+
+  <h1>
+   Upload hier je foto als het een boot is
+  </h1>
+  <form id= "upload-form" action= "{{  url_for('upload2')  }}" method= "POST" enctype= "multipart/form-data">
+  <input type="file" name= "file" accept="image/*" multiple>
+  <input type="submit" value="send">
+
+  </form>
+
+
 </body>
 </html>
