extra van boudewijn

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,10 +37,10 @@
             <button class="btn btn-danger navbar-btn">Upload</button>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Log in</a>
+                <a class="nav-link" href="{{ url_for('login') }}">Log in</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="{{ url_for('register') }}">Register</a>
             </li>
         </ul>
     </div>
