--- a/Templates/layout.html
+++ b/Templates/layout.html
@@ -1,52 +1,48 @@
 <!doctype html>
 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
 <head>
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="static/style.css" rel="stylesheet"/>
+    <link href="static/styles.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
     <a class="navbar-brand" href="#">
-        <img src="helios.png" width="40" height="40" class="d-inline-block align-top" alt="">
-
+        <img src="{{ url_for('static', filename='helios.png') }}"width="40" height="40" class="d-inline-block align-top" alt="">
     </a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
         <li class="nav-item">
-            <a class="nav-link" href="top10.html">Top 10</a>
+            <a class="nav-link" href="{{ url_for('top') }}">Top 10</a>
         </li>
         </ul>
     </div>
 
-    <div class="navbar-right">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-            <button class="btn btn-danger navbar-btn">Upload</button>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="login.html">Log in</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
-            </li>
-        </ul>
-    </div>
+    <ul class="nav navbar-nav">
+        <li class="dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
+                Welcome, User <b class="caret"></b>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right position-absolute" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{{ url_for('register') }}">Profile</a>
+                <a class="dropdown-item" href="{{ url_for('register') }}">Settings</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Log out</a>
+            </div>
+        </li>
+    </ul>
 </nav>
 
 <main>
-        {% block main %} {% endblock %}
+    {% block main %} {% endblock %}
 </main>
+
 </body>
