--- a/Templates/static/styles.css
+++ b/Templates/static/styles.css
@@ -1,95 +1,3 @@
-.navbar-custom
-{
-    background-color: #1a1a1a !important;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    color: #e6b800;
-    letter-spacing: .06em;
-    padding-left:30px;
-    padding-right:30px;
-}
-
-.nav-link
-{
-    color: white !important;
-}
-
-.display-3
-{
-    color: white;
-    font-weight: 700;
-}
-
-.jumbotron-custom
-{
-    background-color: #1a1a1a  !important;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    height: 400px;
-    text-align: center;
-    padding: 100px;
-    margin: 0;
-}
-
-body
-{
-  background-color: white;
-}
-
-.navbar-right
-{
-  float: right;
-}
-
-.btn
-{
-  border: 1px solid red;
-	color: white;
-	background-color: transparent;
-	border-radius: 5px;
-}
-
-.btn:hover
-{
-  color: white;
-  background-color: red;
-}
-
-.navbar-custom li
-{
-    margin-right: 10px;
-}
-
-li
-{
-    display: inline;
-    margin-right: 40px;
-}
-
-nav.navbar-custom ul li a
-{
-  position: relative;
-}
-
-nav.navbar-custom ul li a:after
-{
-  position: absolute;
-  bottom: 0.1rem;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 0%;
-  content: '.';
-  color: transparent;
-  background: red;
-  height: 1px;
-}
-
-nav.navbar-custom ul li a:hover:after
-{
-  width: 70%;
-}
-
 .container {
   position: relative;
   width: 50%;
@@ -109,7 +17,7 @@ nav.navbar-custom ul li a:hover:after
   right: 15px !important;
   opacity: 0;
   transition: .5s ease;
-  background-color: black;
+  background-color: #213159;
 }
 
 .container:hover .overlay {
@@ -120,10 +28,75 @@ nav.navbar-custom ul li a:hover:after
   color: white;
   font-size: 20px;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+
+.btn {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  border: 1px solid white;
+	color: white;
+	background-color: transparent;
+	border-radius: 5px;
+}
+
+.btn:hover
+{
+  background-color: white !important;
+  color: black;
+}
+
+.navbar-custom
+{
+    background-color: #ffffff !important;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #e6b800;
+    letter-spacing: .06em;
+    padding-left:30px;
+    padding-right:30px;
+}
+
+.nav-link
+{
+    color: #213159 !important;
+    font-weight: 500;
+}
+
+.display-3
+{
+    color: white;
+    font-weight: 700;
+}
+
+.jumbotron-custom
+{
+    background-image:
+    linear-gradient(
+      rgba(61, 96, 152, 0.9),
+      rgba(33, 49, 89, 0.9)
+    ),url(camera.jpg);
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    height: 400px;
+    text-align: center;
+    padding: 120px;
+    margin: 0;
+}
+
+body
+{
+  background-color: #e7e7e7;
 }
