--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -26,17 +26,19 @@
         </ul>
     </div>
 
-    <div class="navbar-right">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="login.html">Log in</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
-            </li>
-        </ul>
-    </div>
-
+    <ul class="nav navbar-nav">
+        <li class="dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
+                Welcome, User <b class="caret"></b>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right position-absolute" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{{ url_for('register') }}">Profile</a>
+                <a class="dropdown-item" href="{{ url_for('register') }}">Settings</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Log out</a>
+            </div>
+        </li>
+    </ul>
 </nav>
 
 <main>
