--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('top') }}">Top 10</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('upload') }}">Upload Coole pics</a>
+        </li>
         </ul>
     </div>
 
@@ -32,7 +35,7 @@
                 <a class="nav-link" href="login.html">Log in</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="register">Register</a>
             </li>
         </ul>
     </div>
