--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
                 <input class="form-control" name="confirmation" placeholder="Repeat Password" type="password"/>
             </div>
             <div class="form-group">
-                <button class="btn btn-default" type="submit">Register</button>
+                <button class="btn btn-default" type="submit">Continue</button>
             </div>
         </fieldset>
     </form>
