--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,19 @@
-.container {
+.container
+{
   position: relative;
-  width: 50%;
+  width:50%;
+}
+
+.row
+{
+  margin: 5%;
+}
+
+.container1
+{
+  position: relative;
+  width: 100%;
+  text-align: center;
 }
 
 .image {
@@ -36,7 +49,8 @@
   text-align: center;
 }
 
-.btn {
+.btn
+{
   position: absolute;
   top: 55%;
   left: 50%;
@@ -48,6 +62,23 @@
   margin-right:auto;
   border: 1px solid white;
 	color: white;
+	background-color: transparent;
+	border-radius: 5px;
+}
+
+.btn1
+{
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  border: 1px solid black;
+	color: black;
 	background-color: transparent;
 	border-radius: 5px;
 }
@@ -67,6 +98,10 @@
     letter-spacing: .06em;
     padding-left:30px;
     padding-right:30px;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    z-index: 1;
 }
 
 .nav-link
@@ -92,7 +127,7 @@
     color: white;
     height: 400px;
     text-align: center;
-    padding: 120px;
+    padding: 150px;
     margin: 0;
 }
 
@@ -104,4 +139,23 @@ body
 .navbar-right
 {
   float: right;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.card
+{
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px; /* Added */
+  height: 300px;
+}
+
+main
+{
+  padding-top: 50px;
 }
