--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
     <div class="navbar-right">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Log in</a>
+                <a class="nav-link" href="login">Log in</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="register">Register</a>
