--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
   <img src="{{ url_for('static', filename='audi.jpg') }}" alt="audi" class="image">
   <div class="overlay">
     <div class="text">#Cars</div>
-    <button class="btn btn-light navbar-btn">Upload</button>
-    <a href="{{ url_for('upload') }}" class="btn btn-light navbar-btn">Upload</a>
+    <button class="btn btn-light navbar-btn">Login</button>
+    <a href="{{ url_for('login') }}" class="btn btn-light navbar-btn">Login</a>
   </div>
 </div>
 
