--- a/templates/index1.html
+++ b/templates/index1.html
@@ -13,9 +13,9 @@
   <img src="{{ url_for('static', filename='audi.jpg') }}" alt="audi" class="image">
   <div class="overlay">
     <div class="text">#Cars</div>
-    <button class="btn btn-light navbar-btn">Upload</button>
-    <a href="{{ url_for('upload') }}" class="btn btn-light navbar-btn">Upload</a>
-  </div>
+    <button class="btn btn-light navbar-btn">Choose your favourite picture</button>
+    <a href="{{ url_for('Grinder') }}" class="btn btn-light navbar-btn">Choose your favourite picture</a>
+    </div>
 </div>
 
 {% endblock %}
