--- a/templates/Grinder.html
+++ b/templates/Grinder.html
@@ -4,9 +4,18 @@
 
 <h1 align="center">Choose your favourite picture</h1>
 
+  <div class= "container">
+    <img src="{{ url_choice_2 }}" alt="audi" style="width:100%" />
+    <div class="overlay">
+      <div class="text"># Make your choice</div>
+      <button class="btn btn-light navbar-btn">choose</button>
+      <a href="{{ url_for('login') }}" class="btn btn-light navbar-btn">choose</a>
 
-<div class="container">
-  <img src="{{ url_choice_2 }}" alt="audi" class="image">
+    </div>
+  </div>
+
+<div class= "container">
+  <img src="{{ url_choice }}" alt="audi" style="width:100%"/>
   <div class="overlay">
     <div class="text"># Make your choice</div>
     <button class="btn btn-light navbar-btn">choose</button>
@@ -14,13 +23,5 @@
   </div>
 </div>
 
-<div class="container">
-  <img src="{{ url_choice }}" alt="audi" class="image">
-  <div class="overlay">
-    <div class="text"># Make your choice</div>
-    <button class="btn btn-light navbar-btn">choose</button>
-    <a href="{{ url_for('login') }}" class="btn btn-light navbar-btn">choose</a>
-  </div>
-</div>
 
 {% endblock %}
