--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,12 +9,15 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="static/styles.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='helios1.png') }}" sizes="96x96">
+    <title>Helios: {% block title %}{% endblock %}</title>
+
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{ url_for('index') }}">
         <img src="{{ url_for('static', filename='helios.png') }}"width="40" height="40" class="d-inline-block align-top" alt="">
     </a>
 
@@ -25,6 +28,24 @@
         </li>
         </ul>
     </div>
+
+    {% if session.user_id %}
+
+     <ul class="nav navbar-nav">
+        <li class="dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
+                Welcome {{name}} <b class="caret"></b>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right position-absolute" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{{ url_for('profile') }}">Profile</a>
+                <a class="dropdown-item" href="{{ url_for('settings') }}">Settings</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{{ url_for('logout') }}">Log out</a>
+            </div>
+        </li>
+    </ul>
+
+    {% else %}
 
     <div class="navbar-right">
         <ul class="navbar-nav">
@@ -37,7 +58,10 @@
         </ul>
     </div>
 
+    {% endif %}
 </nav>
+
+</header> <header>
 
 <main>
     {% block main %} {% endblock %}
