--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,12 @@
                 <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
             </div>
             <div class="form-group">
+                <input autocomplete="off" autofocus class="form-control" name="first_name" placeholder="First Name" type="text"/>
+            </div>
+            <div class="form-group">
+                <input autocomplete="off" autofocus class="form-control" name="surname" placeholder="Surname" type="text"/>
+            </div>
+            <div class="form-group">
                 <input class="form-control" name="password" placeholder="Password" type="password"/>
             </div>
             <div class="form-group">
