--- a/static/styles.css
+++ b/static/styles.css
@@ -50,7 +50,7 @@
   text-align: center;
 }
 
-.btn
+.pic-btn
 {
   position: absolute;
   top: 55%;
@@ -84,7 +84,7 @@
 	border-radius: 5px;
 }
 
-.btn:hover
+.pic-btn:hover
 {
   background-color: white !important;
   color: black;
@@ -173,18 +173,13 @@ body
   float: none; /* Added */
   margin-bottom: 10px; /* Added */
   height: 300px;
+  margin-top: 5% !important;
+  text-align: center;
 }
 
 main
 {
   padding-top: 50px;
-}
-
-.card
-{
-  float: none;
-  margin-top: 5% !important;
-  text-align: center;
 }
 
 .row1
@@ -200,4 +195,107 @@ main
     height: auto;
     background: #ccc;
     margin: 5px;
+}
+
+.btn-settings
+{
+  top: 90%;
+  left: 50%;
+  text-align: center;
+  background-color: transparent;
+  color: #213159;
+  border: 1px solid #213159;
+}
+
+.btn-settings:hover
+{
+  background-color: #447DD8;
+  color: white;
+}
+
+.card1
+{
+  float: none;
+  margin-top: 5% !important;
+  text-align: center;
+  height: 340px;
+}
+
+#main
+{
+    height: 50vh;
+}
+
+.btn-follow
+{
+  position: absolute;
+  background-color: transparent;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  border: 1px solid green;
+  color: black;
+  text-align: center;
+  width: 100px;
+  top: 80% !important;
+}
+
+.btn-follow:hover
+{
+  background-color: green;
+  border: 1px solid white;
+  color: white;
+}
+
+.btn-login
+{
+  position: absolute;
+  background-color: transparent;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  border: 1px solid blue;
+  color: black;
+  text-align: center;
+  width: 100px;
+  top: 80% !important;
+}
+
+.btn-login:hover
+{
+  background-color: blue;
+  border: 1px solid white;
+  color: white;
+}
+
+.navbar-btn
+{
+  position: absolute;
+  text-align: center;
+  background-color: transparent;
+  color: #213159;
+  border: 1px solid #213159;
+  left: 85%;
+}
+
+.navbar-btn:hover
+{
+  background-color: #447DD8;
+  color: white;
+}
+
+.card-upload
+{
+  height: 350px;
+}
+
+.btn-upload
+{
+  position: absolute;
+  background-color: transparent;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  border: 1px solid green;
+  color: black;
+  text-align: center;
+  width: 100px;
+  top: 80% !important;
 }
