--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,15 +9,17 @@
   <div class="card-body">
     <h5 class="card-title">Hi there, I'm {{username}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{userbio}}</h6>
+    <a href="#" class="btn btn-success btn-follow">Follow</a>
   </div>
+
 </div>
 
 <div class="row1">
   <div class="column">
-    <a target="_blank" href="{{ url_for('static', filename='audi.jpg') }}"><img src="{{ url_for('static', filename='audi.jpg') }}"></a>
-    <a target="_blank" href="{{ url_for('static', filename='audi.jpg') }}"><img src="{{ url_for('static', filename='audi.jpg') }}"></a>
-    <a target="_blank" href="{{ url_for('static', filename='audi.jpg') }}"><img src="{{ url_for('static', filename='audi.jpg') }}"></a>
-    <a target="_blank" href="{{ url_for('static', filename='audi.jpg') }}"><img src="{{ url_for('static', filename='audi.jpg') }}"></a>
+    <a target="_blank" href="{{ url_for('static', filename='Watches.jpg') }}"><img src="{{ url_for('static', filename='Watches.jpg') }}"></a>
+    <a target="_blank" href="{{ url_for('static', filename='Yachts.jpg') }}"><img src="{{ url_for('static', filename='Yachts.jpg') }}"></a>
+    <a target="_blank" href="{{ url_for('static', filename='Hotels.jpg') }}"><img src="{{ url_for('static', filename='Hotels.jpg') }}"></a>
+    <a target="_blank" href="{{ url_for('static', filename='Cars.jpg') }}"><img src="{{ url_for('static', filename='Cars.jpg') }}"></a>
   </div>
  </div>
 
