--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,15 +3,14 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+<script src="/static/js/script.js"></script>
 
 <head>
-
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="static/styles.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='helios1.png') }}" sizes="96x96">
-    <title>Helios: {% block title %}{% endblock %}</title>
-
+    <title>Helios - {% block title %}{% endblock %}</title>
 </head>
 
 <body>
@@ -24,7 +23,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('top') }}">Top 10</a>
+            <a class="nav-link" href="{{ url_for('top') }}">Ranking</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('top') }}">Explore</a>
         </li>
         </ul>
     </div>
@@ -32,9 +34,10 @@
     {% if session.user_id %}
 
      <ul class="nav navbar-nav">
+        <a href="{{ url_for('upload') }}" class="btn btn-primary navbar-btn">Upload</a>
         <li class="dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                Welcome {{name}} <b class="caret"></b>
+                Account <b class="caret"></b>
             </a>
             <div class="dropdown-menu dropdown-menu-right position-absolute" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{{ url_for('profile') }}">Profile</a>
