--- a/templates/apology.html
+++ b/templates/apology.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block main %}
-    <img alt="Sorry!" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/4cXVC0o.jpg"/>
+
+<div class="d-flex justify-content-center align-items-center" id="main">
+    <h1 class="mr-3 pr-3 align-top border-right inline-block align-content-center">404</h1>
+    <div class="inline-block align-middle">
+    	<h2 class="font-weight-normal lead" id="desc">The page you requested was not found.</h2>
+    </div>
+</div>
+
 {% endblock %}
