--- a/templates/grinder.html
+++ b/templates/grinder.html
@@ -4,9 +4,9 @@
 
 <h1 align="center">Choose your favourite picture</h1>
 
-
+{% if cat == "item1" %}
 <div class="container">
-  <form action="{{ url_for('grinder') }}" method="POST">
+  <form action="{{ url_for('grinder_car') }}" method="POST">
   <img src="{{ url_choice }}" alt="audi" class="image">
   <div class="overlay">
     <input type="hidden" id="slider_input" name="Foto1" value="Ja" />
@@ -18,7 +18,7 @@
 </div>
 
 <div class="container">
-  <form action="{{ url_for('grinder') }}" method="POST">
+  <form action="{{ url_for('grinder_car') }}" method="POST">
   <img src="{{ url_choice_2 }}" alt="audi" class="image">
   <div class="overlay">
     <input type="hidden" id="slider_input" name="Foto2" value="Ja" />
@@ -28,7 +28,85 @@
   </div>
   </form>
 </div>
+{% endif %}
+{% if cat == "item2" %}
+<div class="container">
+  <form action="{{ url_for('grinder_yacht') }}" method="POST">
+  <img src="{{ url_choice }}" alt="audi" class="image">
+  <div class="overlay">
+    <input type="hidden" id="slider_input" name="Foto3" value="Ja" />
+    <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}"
+    <div class="text"></div>
+    <button class="btn btn-light navbar-btn">choose</button>
+  </div>
+  </form>
+</div>
 
+<div class="container">
+  <form action="{{ url_for('grinder_yacht') }}" method="POST">
+  <img src="{{ url_choice_2 }}" alt="audi" class="image">
+  <div class="overlay">
+    <input type="hidden" id="slider_input" name="Foto4" value="Ja" />
+    <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}"
+    <div class="text"></div>
+    <button class="btn btn-light navbar-btn">choose</button>
+  </div>
+  </form>
+</div>
+{% endif %}
+
+{% if cat == "item3" %}
+<div class="container">
+  <form action="{{ url_for('grinder_hotel') }}" method="POST">
+  <img src="{{ url_choice }}" alt="audi" class="image">
+  <div class="overlay">
+    <input type="hidden" id="slider_input" name="Foto5" value="Ja" />
+    <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}"
+    <div class="text"></div>
+    <button class="btn btn-light navbar-btn">choose</button>
+  </div>
+  </form>
+</div>
+
+<div class="container">
+  <form action="{{ url_for('grinder_hotel') }}" method="POST">
+  <img src="{{ url_choice_2 }}" alt="audi" class="image">
+  <div class="overlay">
+    <input type="hidden" id="slider_input" name="Foto6" value="Ja" />
+    <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}"
+    <div class="text"></div>
+    <button class="btn btn-light navbar-btn">choose</button>
+  </div>
+  </form>
+</div>
+{% endif %}
+
+{% if cat == "item4" %}
+<div class="container">
+  <form action="{{ url_for('grinder_watch') }}" method="POST">
+  <img src="{{ url_choice }}" alt="audi" class="image">
+  <div class="overlay">
+    <input type="hidden" id="slider_input" name="Foto7" value="Ja" />
+    <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}"
+    <div class="text"></div>
+    <button class="btn btn-light navbar-btn">choose</button>
+  </div>
+  </form>
+</div>
+
+<div class="container">
+  <form action="{{ url_for('grinder_watch') }}" method="POST">
+  <img src="{{ url_choice_2 }}" alt="audi" class="image">
+  <div class="overlay">
+    <input type="hidden" id="slider_input" name="Foto8" value="Ja" />
+    <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}"
+    <div class="text"></div>
+    <button class="btn btn-light navbar-btn">choose</button>
+  </div>
+  </form>
+</div>
+
+{% endif %}
 
 
 {% endblock %}
