--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <img src="static/{{cats[2]}}" alt="{{cats[0]}}" class="image">
     <div class="overlay">
       <div class="text">#{{cats[0]}}</div>
-      <a href="{{ url_for('grinder') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('grinder_hotel') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -42,7 +42,7 @@
     <img src= "static/{{cats[3]}}" alt= {{cats[1]}} class="image" id="image">
     <div class="overlay">
       <div class="text">#{{cats[1]}}</div>
-      <a href="{{ url_for('grinder') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('grinder_hotel') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 </div>
