--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,11 +16,11 @@
 
 <div class="row1">
   <div class="column">
-    <a target="_blank" href="{{ url_for('static', filename='Watches.jpg') }}"><img src="{{ url_for('static', filename='Watches.jpg') }}"></a>
-    <a target="_blank" href="{{ url_for('static', filename='Yachts.jpg') }}"><img src="{{ url_for('static', filename='Yachts.jpg') }}"></a>
-    <a target="_blank" href="{{ url_for('static', filename='Hotels.jpg') }}"><img src="{{ url_for('static', filename='Hotels.jpg') }}"></a>
-    <a target="_blank" href="{{ url_for('static', filename='Cars.jpg') }}"><img src="{{ url_for('static', filename='Cars.jpg') }}"></a>
+    {% for image in pictures %}
+      <a target="_blank" href="{{ url_for('static', filename='Watches.jpg') }}"><img src="{{ image.pic }}"></a>
+      <a target="_blank" href="{{ url_for('static', filename='Watches.jpg') }}"><img src="{{ image.pic1 }}"></a>
+    {% endfor %}
   </div>
- </div>
+</div>
 
 {% endblock %}
