--- a/templates/login.html
+++ b/templates/login.html
@@ -14,18 +14,23 @@
                 <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
             </div>
             <div class="form-group">
-                <input class="form-control" name="password" placeholder="Password" type="password"/>
+                <input class="form-control" name="password" placeholder="Password" id="password" type="password"/>
             </div>
+
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1" onclick="myFunction()">
+                <label class="form-check-label" for="inlineRadio1">Show password</label>
+            </div>
+
             <div class="form-group">
                 <button class="btn btn-default btn-login" type="submit">Log In</button>
             </div>
         </fieldset>
-</form>
-
-
-
+    </form>
   </div>
 </div>
 
 
 {% endblock %}
+
+
