--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,10 +5,12 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 <script src="/static/js/script.js"></script>
 
+
 <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="static/styles.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='helios1.png') }}" sizes="96x96">
     <title>Helios - {% block title %}{% endblock %}</title>
 </head>
@@ -23,10 +25,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('top') }}">Ranking</a>
+            <a class="nav-link" href="{{ url_for('cats') }}">Categories</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('top') }}">Explore</a>
+            <a class="nav-link" href="{{ url_for('top') }}">Ranking</a>
         </li>
         </ul>
     </div>
@@ -37,13 +39,13 @@
         <a href="{{ url_for('upload') }}" class="btn btn-primary navbar-btn">Upload</a>
         <li class="dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                Account <b class="caret"></b>
+                <span class="fas fa-user"></span> <b class="caret"></b>
             </a>
             <div class="dropdown-menu dropdown-menu-right position-absolute" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{ url_for('profile') }}">Profile</a>
-                <a class="dropdown-item" href="{{ url_for('settings') }}">Settings</a>
+                <a class="dropdown-item" href="{{ url_for('profile') }}"><span class="fas fa-user-circle"></span>Profile</a>
+                <a class="dropdown-item" href="{{ url_for('settings') }}"><span class="fas fa-cog"></span>Settings</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{{ url_for('logout') }}">Log out</a>
+                <a class="dropdown-item" href="{{ url_for('logout') }}"><span class="fas fa-sign-out-alt"></span>Log out</a>
             </div>
         </li>
     </ul>
