--- a/templates/top.html
+++ b/templates/top.html
@@ -2,5 +2,10 @@
 
 {% block main %}
 
+<div class="jumbotron jumbotron-fluid jumbotron-custom2">
+    <div class="container1">
+        <p class="lead1">Ranking</p>
+    </div>
+</div>
 
 {% endblock %}
