--- a/templates/cats.html
+++ b/templates/cats.html
@@ -13,7 +13,7 @@
     <img src="{{ url_for('static', filename = 'Hotels.jpg')}}" alt="Hotels" class="image">
     <div class="overlay">
       <div class="text">Hotels</div>
-      <a href="{{ url_for('grinder') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('grinder_hotel') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -21,7 +21,7 @@
     <img src="{{ url_for('static', filename = 'Yachts.jpg')}}" alt="Yachts" class="image" id="image">
     <div class="overlay">
       <div class="text">Yachts</div>
-      <a href="{{ url_for('grinder') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('grinder_yacht') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -29,7 +29,7 @@
     <img src="{{ url_for('static', filename = 'Watches.jpg')}}" alt="Watches" class="image">
     <div class="overlay">
       <div class="text">Watches</div>
-      <a href="{{ url_for('grinder') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('grinder_watch') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -37,7 +37,7 @@
     <img src="{{ url_for('static', filename = 'Cars.jpg')}}" alt="Cars" class="image" id="image">
     <div class="overlay">
       <div class="text">Cars</div>
-      <a href="{{ url_for('grinder') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('grinder_car') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
