--- a/templates/upload.html
+++ b/templates/upload.html
@@ -21,10 +21,10 @@
             <div class="form-group">
                 <select class="custom-select mr-sm-2" name="select" method="POST">
                     <option disabled selected value="">Category</option>
-                      <option value="auto">Cars</option>
-                      <option value="boot">Yachts</option>
-                      <option value="watches">Watches</option>
-                      <option value="hotels">Hotels</option>
+                      <option value="Cars">Cars</option>
+                      <option value="Yachts">Yachts</option>
+                      <option value="Watches">Watches</option>
+                      <option value="Hotels">Hotels</option>
                 </select>
             </div>
 
