--- a/templates/top.html
+++ b/templates/top.html
@@ -8,4 +8,16 @@
     </div>
 </div>
 
+<table class="table table-striped">
+        <tbody>
+            {% for key, value in data.items() %}
+           <tr>
+                <th> {{ key }} </th>
+                <td> {{ value }} </td>
+           </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+
 {% endblock %}
