--- a/static/styles.css
+++ b/static/styles.css
@@ -199,7 +199,7 @@ main
   padding-top: 50px;
 }
 
-.row1
+.row row-1
 {
     margin: 4%;
     text-align: center;
@@ -340,4 +340,28 @@ main
 .custom-select
 {
   width: 7rem;
+}
+
+.table
+{
+  position: relative;
+  margin: 0 auto;
+  width: 700px;
+  text-align: center;
+  float: none;
+  -moz-border-radius:10px;
+  -webkit-border-radius:10px;
+}
+
+.thead
+{
+  background-color: #213159 !important;
+  color: white;
+}
+
+.profile-pic
+{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
