--- a/templates/apology.html
+++ b/templates/apology.html
@@ -1,15 +1,13 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    Apology
-{% endblock %}
+{% block title %} Apology {% endblock %}
 
 {% block main %}
 
 <div class="d-flex justify-content-center align-items-center" id="main">
     <h1 class="mr-3 pr-3 align-top border-right inline-block align-content-center">404</h1>
     <div class="inline-block align-middle">
-    	<h2 class="font-weight-normal lead" id="desc">The page you requested was not found.</h2>
+    	<h2 class="font-weight-normal lead" id="desc">{{text}}</h2>
     </div>
 </div>
 
