--- a/templates/cats.html
+++ b/templates/cats.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %} Categories {% endblock %}
+
 {% block main %}
 
 <div class="jumbotron jumbotron-fluid jumbotron-custom2">
